@@ -5,6 +5,7 @@ Revision history for App-EUMM-Upgrade
         Better detection of version-checking constructs
         Better search for 'Perl' license
         Scan 'author' section for license
+        Support for arrayref in 'AUTHOR'
 
 0.22    2010-01-11
         Better detection of version-checking constructs
